--- a/src/layout/Navbar.css
+++ b/src/layout/Navbar.css
@@ -10,7 +10,7 @@
   padding-bottom: 20px;
   max-width: 100vw;
   border-bottom: 1px solid #c4c4c4a9;
-  z-index: 999;
+  z-index: 998;
   position: fixed;
   width: calc(100% - 64px);
   background: rgb(255, 255, 255, 0.9);
